--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
 				<div class="travel__map">
 					
 					<svg class="pointer" width="32" height="32">
-						<use href="./images/symbol-defs#pointer"></use>
+						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
 					<svg class="pointer" width="32" height="32">
-						<use href="./images/symbol-defs#pointer"></use>
+						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
 					<svg class="pointer" width="32" height="32">
-						<use href="./images/symbol-defs#pointer"></use>
+						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
 					<svg class="pointer" width="32" height="32">
-						<use href="./images/symbol-defs#pointer"></use>
+						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
 					<img src="./images/c1ae1fd2697c8ef94d63084207a803de.png" alt="" width="950" height="510" />
 				</div>
