--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css "
 		/>
-		<link rel="stylesheet" href="./css/main.css"/>
+		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
 		<!-- HERO -->
@@ -61,7 +61,7 @@
 			<a class="button gallery__button" href="">View more</a>
 		</section>
 		<!-- Where to go -->
-		<section class="travel  container">
+		<section class="travel container">
 			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" />
 			<div class="travel__map-thumb">
 				<div class="travel__thumb">
@@ -76,7 +76,6 @@
 					</p>
 				</div>
 				<div class="travel__map">
-					
 					<svg class="pointer" width="32" height="32">
 						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
@@ -96,13 +95,19 @@
 		<!-- Invitation -->
 		<section class="invitation section container">
 			<div class="invitation__gallery">
-				<img class="invitation__photo" src="./images/1840d536f0cc6d2a5dcb5ba966b2a8cd.jpeg" alt="" />
-				<img class="invitation__photo" src="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" alt="" />
-				<img class="invitation__photo" src="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" alt="" />
-				<img class="invitation__photo" src="./images/2642b78d1066af1ad666544184a1b519.jpeg" alt="" />
-				<img class="invitation__photo" src="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" alt="" />
-				<img class="invitation__photo" src="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" alt="" />
-				<img class="invitation__photo" src="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" alt="" />
+				<div class="column">
+					<img class="invitation__photo item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
+					<img class="invitation__photo item-2" src="./images/2642b78d1066af1ad666544184a1b519.jpeg" alt="" />
+				</div>
+				<div class="column">
+					<img class="invitation__photo item-3" src="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" alt="" />
+					<img class="invitation__photo item-4" src="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" alt="" />
+					<img class="invitation__photo item-5" src="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" alt="" />
+				</div>
+				<div class="column">
+					<img class="invitation__photo item-6" src="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" alt="" />
+					<img class="invitation__photo item-7" src="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" alt="" />
+				</div>
 			</div>
 			<div class="invitation__text-thumb">
 				<h2 class="title">At Your Service</h2>
