--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
 		<!-- Gallery -->
 		<section class="gallery section container">
 			<div class="gallery__pictureset">
-				<img class="gallery__image" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" alt="" />
-				<img class="gallery__image" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
-				<img class="gallery__image" src="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" alt="" />
-				<img class="gallery__image" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" alt="" />
-				<img class="gallery__image" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" alt="" />
-				<img class="gallery__image" src="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" alt="" />
+				<div class="gallery__column-1">
+					<img class="gallery__image image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" alt="" />
+					<img class="gallery__image image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" alt="" />
+				</div>
+				<div class="gallery__column-2 " >
+					<img class="gallery__image image-item-3" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
+					<img class="gallery__image image-item-4" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" alt="" />
+				</div>
+				<div class="gallery__column-1">
+					<img class="gallery__image image-item-5" src="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" alt="" />
+					<img class="gallery__image image-item-6" src="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" alt="" />
+				</div>
 			</div>
 
 			<h2 class="title gallery__title">There is a world of possibilities out there</h2>
