--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<section class="hero section container">
 			<div class="hero__thumb">
 				<h1 class="section-title">
-					Your Journey
+					<span class="animation-first">Your Journey</span>
 					<br />
-					Starts Here...
+					<span class="animation-second">Starts Here...</span>
 				</h1>
 				<p class="sub-title hero__subtitle">the travel companies that will change the way you see the world</p>
 			</div>
@@ -52,7 +52,7 @@
 					<img class="gallery__image image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" alt="" />
 					<img class="gallery__image image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" alt="" />
 				</div>
-				<div class="gallery__column-2 " >
+				<div class="gallery__column-2">
 					<img class="gallery__image image-item-3" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
 					<img class="gallery__image image-item-4" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" alt="" />
 				</div>
