--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
 					<span class="animation-second">Starts Here...</span>
 				</h1>
 				<p class="sub-title hero__subtitle">the travel companies that will change the way you see the world</p>
+				<a href="#about">
+					<div class="hero__icon-wrapper">
+						<svg class="hero__arrow-icon" width="66" height="32">
+							<use href="./images/symbol-defs.svg#arrow"></use>
+						</svg>
+					</div>
+				</a>
 			</div>
 		</section>
 		<!-- About -->
-		<section class="about section container">
+		<section class="about section container" id="about">
 			<h2 class="title about__title">Luxury tailor-made holidays from Original Travel</h2>
 			<h3 class="sub-title about__subtitle">At Original Travel we believe that life is in the detail</h3>
 			<div class="about__thumb">
@@ -43,10 +50,12 @@
 					itinerary which is big on imagination and catered around each individual's interests.&nbsp;
 				</p>
 			</div>
-			<img class="about__image" src="./images/e7f30519174d8fa83955e6fcde111ddd.png" alt="" />
+			<a href="#gallery">
+				<img class="about__image" src="./images/e7f30519174d8fa83955e6fcde111ddd.png" alt="" />
+			</a>
 		</section>
 		<!-- Gallery -->
-		<section class="gallery section container">
+		<section class="gallery section container" id="gallery">
 			<div class="gallery__pictureset">
 				<div class="gallery__column-1">
 					<img class="gallery__image image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" alt="" />
@@ -64,7 +73,7 @@
 
 			<h2 class="title gallery__title">There is a world of possibilities out there</h2>
 			<p class="sub-title gallery__subtitle">Here are just a few trip ideas to get you started</p>
-			<a class="button gallery__button" href="">View more</a>
+			<a class="button gallery__button" href="#invitation">View more</a>
 		</section>
 		<!-- Where to go -->
 		<section class="travel container">
@@ -99,7 +108,7 @@
 			</div>
 		</section>
 		<!-- Invitation -->
-		<section class="invitation section container">
+		<section class="invitation section container" id="invitation">
 			<div class="invitation__gallery">
 				<div class="column">
 					<img class="invitation__photo item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
