--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			</a>
 		</section>
 		<!-- Gallery -->
-		<section class="gallery section container" id="gallery">
-			<div class="gallery__pictureset">
+		<section class="gallery section container">
+			<div class="gallery__pictureset" id="gallery">
 				<div class="gallery__column-1">
 					<img class="gallery__image image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" alt="" />
 					<img class="gallery__image image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" alt="" />
@@ -78,7 +78,7 @@
 		<!-- Where to go -->
 		<section class="travel container">
 			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" />
-			<div class="travel__map-thumb">
+			<div class="travel__map-thumb" id="invitation">
 				<div class="travel__thumb">
 					<h2 class="title travel__title">Where to go?</h2>
 					<p class="travel__subtitle">Explore the world to find the destination of your choice.</p>
@@ -90,7 +90,7 @@
 						waters during a fortnight’s sailing trip across the Indian Ocean.
 					</p>
 				</div>
-				<div class="travel__map">
+				<div class="travel__map" >
 					<svg class="pointer" width="32" height="32">
 						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
@@ -108,7 +108,7 @@
 			</div>
 		</section>
 		<!-- Invitation -->
-		<section class="invitation section container" id="invitation">
+		<section class="invitation section container" >
 			<div class="invitation__gallery">
 				<div class="column">
 					<img class="invitation__photo item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
