--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css "
 		/>
+		<script defer src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
@@ -58,16 +61,28 @@
 		<section class="gallery section container">
 			<div class="gallery__pictureset" id="gallery">
 				<div class="gallery__column-1">
-					<img class="gallery__image image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" alt="" />
-					<img class="gallery__image image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" alt="" />
+					<a class="gallery__image" href="./images/5765c18309eb63c5b69a828f0081573b.jpeg" data-fancybox="gallery">
+						<img class="image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" />
+					</a>
+					<a class="gallery__image" href="./images/0c531cdd36e02cad89be579e0556d38f.jpeg " data-fancybox="gallery">
+						<img class="image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" />
+					</a>
 				</div>
 				<div class="gallery__column-2">
-					<img class="gallery__image image-item-3" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
-					<img class="gallery__image image-item-4" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" alt="" />
+					<a class="gallery__image" href="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-fancybox="gallery">
+						<img class="image-item-3" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" />
+					</a>
+					<a class="gallery__image" href="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" data-fancybox="gallery">
+						<img class="image-item-4" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" />
+					</a>
 				</div>
 				<div class="gallery__column-1">
-					<img class="gallery__image image-item-5" src="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" alt="" />
-					<img class="gallery__image image-item-6" src="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" alt="" />
+					<a class="gallery__image" href="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" data-fancybox="gallery">
+						<img class="image-item-5" src="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" />
+					</a>
+					<a class="gallery__image" href="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" data-fancybox="gallery">
+						<img class="image-item-6" src="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" />
+					</a>
 				</div>
 			</div>
 
@@ -90,17 +105,17 @@
 						waters during a fortnight’s sailing trip across the Indian Ocean.
 					</p>
 				</div>
-				<div class="travel__map" >
-					<svg class="pointer" width="32" height="32">
+				<div class="travel__map">
+					<svg class="pointer" width="32" height="32" data="alaska">
 						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
-					<svg class="pointer" width="32" height="32">
+					<svg class="pointer" width="32" height="32" data="rio">
 						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
-					<svg class="pointer" width="32" height="32">
+					<svg class="pointer" width="32" height="32" data="turkey">
 						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
-					<svg class="pointer" width="32" height="32">
+					<svg class="pointer" width="32" height="32" data="indonesia">
 						<use href="./images/symbol-defs.svg#pointer"></use>
 					</svg>
 					<img src="./images/c1ae1fd2697c8ef94d63084207a803de.png" alt="" width="950" height="510" />
@@ -108,20 +123,34 @@
 			</div>
 		</section>
 		<!-- Invitation -->
-		<section class="invitation section container" >
+		<section class="invitation section container" data-last-element>
 			<div class="invitation__gallery">
 				<div class="column">
-					<img class="invitation__photo item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" alt="" />
-					<img class="invitation__photo item-2" src="./images/2642b78d1066af1ad666544184a1b519.jpeg" alt="" />
+					<a class="invitation__photo" href="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-fancybox="invitation">
+						<img class="item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" />
+					</a>
+					<a class="invitation__photo" href="./images/2642b78d1066af1ad666544184a1b519.jpeg" data-fancybox="invitation">
+						<img class="item-2" src="./images/2642b78d1066af1ad666544184a1b519.jpeg" />
+					</a>
 				</div>
 				<div class="column">
-					<img class="invitation__photo item-3" src="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" alt="" />
-					<img class="invitation__photo item-4" src="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" alt="" />
-					<img class="invitation__photo item-5" src="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" alt="" />
+					<a class="invitation__photo" href="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" data-fancybox="invitation">
+						<img class="item-3" src="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" />
+					</a>
+					<a class="invitation__photo" href="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" data-fancybox="invitation">
+						<img class="item-4" src="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" />
+					</a>
+					<a class="invitation__photo" href="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" data-fancybox="invitation">
+						<img class="item-5" src="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" />
+					</a>
 				</div>
 				<div class="column">
-					<img class="invitation__photo item-6" src="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" alt="" />
-					<img class="invitation__photo item-7" src="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" alt="" />
+					<a class="invitation__photo" href="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" data-fancybox="invitation">
+						<img class="item-6" src="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" />
+					</a>
+					<a class="invitation__photo" href="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" data-fancybox="invitation">
+						<img class="item-7" src="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" />
+					</a>
 				</div>
 			</div>
 			<div class="invitation__text-thumb">
@@ -135,5 +164,8 @@
 				<a class="button invitation__button" href="">view more</a>
 			</div>
 		</section>
+		<!-- modals -->
+		
+		<script src="./js/gallery-js.js" type="module"></script>
 	</body>
 </html>
