--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 					itinerary which is big on imagination and catered around each individual's interests.&nbsp;
 				</p>
 			</div>
-			<a href="#gallery">
+			<a href="#gallery-btn">
 				<img class="about__image" src="./images/e7f30519174d8fa83955e6fcde111ddd.png" alt="" />
 			</a>
 		</section>
 		<!-- Gallery -->
 		<section class="gallery section container">
-			<div class="gallery__pictureset" id="gallery">
+			<div class="gallery__pictureset" id="gallery-btn">
 				<div class="gallery__column-1">
 					<a class="gallery__image" href="./images/5765c18309eb63c5b69a828f0081573b.jpeg" data-fancybox="gallery">
 						<img class="image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" />
@@ -88,7 +88,7 @@
 
 			<h2 class="title gallery__title">There is a world of possibilities out there</h2>
 			<p class="sub-title gallery__subtitle">Here are just a few trip ideas to get you started</p>
-			<a class="button gallery__button" href="#invitation">View more</a>
+			<a class="button gallery__button" href="#invitation-btn">View more</a>
 		</section>
 		<!-- Where to go -->
 		<section class="travel container">
@@ -123,7 +123,7 @@
 			</div>
 		</section>
 		<!-- Invitation -->
-		<section class="invitation section container" data-last-element>
+		<section class="invitation section container" data-last-element id="invitation-btn">
 			<div class="invitation__gallery">
 				<div class="column">
 					<a class="invitation__photo" href="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-fancybox="invitation">
