--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
 			</div>
 		</section>
 		<!-- modals -->
+		<footer class="container">
+			<p>copyright MikeNovicov Developer © </p>
+		</footer >
 		
 		<script src="./js/gallery-js.js" type="module"></script>
 	</body>
