--- a/index.html
+++ b/index.html
@@ -21,24 +21,6 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
-		<header id="home">
-			<a href="#">
-				<img class="header__logo" src="./images/e7f30519174d8fa83955e6fcde111ddd.png" alt="Logo" width="70px" />
-			</a>
-			<div class="header__thumb">
-				<nav>
-					<ul class="header__nav">
-						<li><a href="#about">About</a></li>
-						<li><a href="#gallery-btn">Explore</a></li>
-						<li><a href="#places">Places</a></li>
-						<li><a href="#gallery_nav">Gallery</a></li>
-						<li><a href="#">Contacts</a></li>
-						<li></li>
-					</ul>
-				</nav>
-				<a class="button invitation__button nav---btn" type="button">Login</a>
-			</div>
-		</header>
 		<!-- HERO -->
 		<section class="hero section container">
 			<div class="hero__thumb">
@@ -110,14 +92,7 @@
 		</section>
 		<!-- Where to go -->
 		<section class="travel container">
-			<img
-				class="travel__image"
-				src="./images/358031b08eefaf6dd090cf867882e7b6.png"
-				alt=""
-				width="1200"
-				height="812"
-				id="places"
-			/>
+			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" />
 			<div class="travel__map-thumb" id="invitation">
 				<div class="travel__thumb">
 					<h2 class="title travel__title">Where to go?</h2>
@@ -149,7 +124,7 @@
 		</section>
 		<!-- Invitation -->
 		<section class="invitation section container" data-last-element id="invitation-btn">
-			<div class="invitation__gallery" id="gallery_nav">
+			<div class="invitation__gallery">
 				<div class="column">
 					<a class="invitation__photo" href="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-fancybox="invitation">
 						<img class="item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" />
@@ -189,12 +164,9 @@
 				<a class="button invitation__button" href="">view more</a>
 			</div>
 		</section>
-		<footer class="container">
-			<p>copyright MikeNovicov Developer ©</p>
-		</footer>
 		<!-- modals -->
 
-
 		<script src="./js/gallery-js.js" type="module"></script>
+
 	</body>
 </html>
