--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</section>
 		<!-- Where to go -->
 		<section class="travel container">
-			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" />
+			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" id="places"/>
 			<div class="travel__map-thumb" id="invitation">
 				<div class="travel__thumb">
 					<h2 class="title travel__title">Where to go?</h2>
