--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		/>
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css "
@@ -183,6 +184,7 @@
 				<a class="button invitation__button" href="">view more</a>
 			</div>
 		</section>
+		<a href="#home" class="return-to-top"><i class="icon-chevron-up"></i></a>
 		<!-- modals -->
 		<footer class="container">
 			<p>copyright MikeNovicov Developer © </p>
