--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Travel Site</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="icon" type="image/png" href="./images/e7f30519174d8fa83955e6fcde111ddd.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			rel="stylesheet"
