add some animations

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		/>
 		<script defer src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
@@ -82,26 +83,26 @@
 			<div class="gallery__pictureset" id="gallery-btn">
 				<div class="gallery__column-1">
 					<a class="gallery__image" href="./images/5765c18309eb63c5b69a828f0081573b.jpeg" data-fancybox="gallery">
-						<img class="image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" />
+						<img class="image-item-1" src="./images/5765c18309eb63c5b69a828f0081573b.jpeg" data-aos="zoom-in-up" data-aos-once="true"/>
 					</a>
 					<a class="gallery__image" href="./images/0c531cdd36e02cad89be579e0556d38f.jpeg " data-fancybox="gallery">
-						<img class="image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" />
+						<img class="image-item-2" src="./images/0c531cdd36e02cad89be579e0556d38f.jpeg" data-aos="zoom-in-up" data-aos-once="true"/>
 					</a>
 				</div>
-				<div class="gallery__column-2">
+				<div class="gallery__column-2" >
 					<a class="gallery__image" href="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-fancybox="gallery">
-						<img class="image-item-3" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" />
+						<img class="image-item-3" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-aos="zoom-in-up" data-aos-once="true"/>
 					</a>
 					<a class="gallery__image" href="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" data-fancybox="gallery">
-						<img class="image-item-4" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" />
+						<img class="image-item-4" src="./images/6f73a9ce2ff1c603b3514f693a31c45f.jpeg" data-aos="zoom-in-up" data-aos-once="true"/>
 					</a>
 				</div>
 				<div class="gallery__column-1">
 					<a class="gallery__image" href="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" data-fancybox="gallery">
-						<img class="image-item-5" src="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" />
+						<img class="image-item-5" src="./images/7de6a9cf7f1e3f17e9c4431eb2aecf5b.jpeg" data-aos="zoom-in-up" data-aos-once="true"/>
 					</a>
 					<a class="gallery__image" href="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" data-fancybox="gallery">
-						<img class="image-item-6" src="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" />
+						<img class="image-item-6" src="./images/039e5f77573daeb5bf9d94121f8120ed.jpeg" data-aos="zoom-in-up" data-aos-once="true"/>
 					</a>
 				</div>
 			</div>
@@ -126,19 +127,19 @@
 					</p>
 				</div>
 				<div class="travel__map">
-					<svg class="pointer" width="32" height="32" data="alaska">
-						<use href="./images/symbol-defs.svg#pointer"></use>
+					<svg class="pointer" width="32" height="32" data="alaska"  >
+						<use href="./images/symbol-defs.svg#pointer" data-aos="fade-down " data-aos-delay="150" data-aos-once="false"></use>
 					</svg>
-					<svg class="pointer" width="32" height="32" data="rio">
-						<use href="./images/symbol-defs.svg#pointer"></use>
+					<svg class="pointer" width="32" height="32" data="rio"  >
+						<use href="./images/symbol-defs.svg#pointer" data-aos="fade-down " data-aos-delay="200" data-aos-once="false"></use>
 					</svg>
-					<svg class="pointer" width="32" height="32" data="turkey">
-						<use href="./images/symbol-defs.svg#pointer"></use>
+					<svg class="pointer" width="32" height="32" data="turkey"  >
+						<use href="./images/symbol-defs.svg#pointer" data-aos="fade-down " data-aos-delay="250" data-aos-once="false"></use>
 					</svg>
-					<svg class="pointer" width="32" height="32" data="indonesia">
-						<use href="./images/symbol-defs.svg#pointer"></use>
+					<svg class="pointer" width="32" height="32" data="indonesia"  >
+						<use href="./images/symbol-defs.svg#pointer" data-aos="fade-down " data-aos-delay="300" data-aos-once="false"></use>
 					</svg>
-					<img src="./images/c1ae1fd2697c8ef94d63084207a803de.png" alt="" width="950" height="510" />
+					<img src="./images/c1ae1fd2697c8ef94d63084207a803de.png" alt="" width="950" height="510" data-aos="fade-down" id="map"/>
 				</div>
 			</div>
 		</section>
@@ -148,29 +149,29 @@
 			<div class="invitation__gallery" id="gallery_nav">
 				<div class="column">
 					<a class="invitation__photo" href="./images/30c11f7687e03d671bd18b9373ace321.jpeg" data-fancybox="invitation">
-						<img class="item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg" />
+						<img class="item-1" src="./images/30c11f7687e03d671bd18b9373ace321.jpeg"  data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="0"/>
 					</a>
 					<a class="invitation__photo" href="./images/2642b78d1066af1ad666544184a1b519.jpeg" data-fancybox="invitation">
-						<img class="item-2" src="./images/2642b78d1066af1ad666544184a1b519.jpeg" />
+						<img class="item-2" src="./images/2642b78d1066af1ad666544184a1b519.jpeg" data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="80"/>
 					</a>
 				</div>
 				<div class="column">
 					<a class="invitation__photo" href="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" data-fancybox="invitation">
-						<img class="item-3" src="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" />
+						<img class="item-3" src="./images/39db8cdd268c8c72f24cb3f97f0ffe03.jpeg" data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="160"/>
 					</a>
 					<a class="invitation__photo" href="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" data-fancybox="invitation">
-						<img class="item-4" src="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" />
+						<img class="item-4" src="./images/2b1966ee8e9994d4051d1154196acc0e.jpeg" data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="240"/>
 					</a>
 					<a class="invitation__photo" href="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" data-fancybox="invitation">
-						<img class="item-5" src="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" />
+						<img class="item-5" src="./images/c280cce5b798a3de3cd815dfbe6d6aca.jpeg" data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="360"/>
 					</a>
 				</div>
 				<div class="column">
 					<a class="invitation__photo" href="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" data-fancybox="invitation">
-						<img class="item-6" src="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" />
+						<img class="item-6" src="./images/83a646c2e38520ce87aae57f3854ce70.jpeg" data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="420"/>
 					</a>
 					<a class="invitation__photo" href="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" data-fancybox="invitation">
-						<img class="item-7" src="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" />
+						<img class="item-7" src="./images/2dc75a8e9e53f1bb9dd451feb100dc6c.jpeg" data-aos="zoom-out-down" data-aos-once="true"  data-aos-easing="ease-in-out" data-aos-delay="480"/>
 					</a>
 				</div>
 			</div>
@@ -191,8 +192,12 @@
 			<p>copyright MikeNovicov Developer © </p>
 		</footer >
 
-
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/javascript-debounce@1.0.1/dist/javascript-debounce.min.js"></script>
 		<script src="./js/gallery-js.js" type="module"></script>
+
+		<script>
+			AOS.init();
+		  </script>
 	</body>
 </html>
