--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			</div>
 		</header>
 		<!-- HERO -->
-		<section class="hero section container">
-			<div class="hero__thumb">
+		<section class="hero section container" >
+			<div class="hero__thumb" >
 				<h1 class="section-title">
 					<span class="animation-first">Your Journey</span>
 					<br />
@@ -62,20 +62,20 @@
 		</section>
 		<!-- About -->
 		<section class="about section container" id="about">
-			<h2 class="title about__title">Luxury tailor-made holidays from Original Travel</h2>
-			<h3 class="sub-title about__subtitle">At Original Travel we believe that life is in the detail</h3>
+			<h2 class="title about__title" data-aos="fade-down"  data-aos-duration="800" data-aos-once="true">Luxury tailor-made holidays from Original Travel</h2>
+			<h3 class="sub-title about__subtitle" data-aos="fade-down" data-aos-delay="50" data-aos-duration="800" data-aos-once="true">At Original Travel we believe that life is in the detail</h3>
 			<div class="about__thumb">
-				<p class="text">
+				<p class="text" data-aos="fade-down" data-aos-delay="100" data-aos-duration="800" data-aos-once="true">
 					For instance, the emphasis is on flexibility and personalisation across a range of authentic experiences in
 					Africa, Asia, Latin America and Canada. Designing each holiday around a client’s.
 				</p>
-				<p class="text">
+				<p class="text" data-aos="fade-down" data-aos-delay="150" data-aos-duration="800" data-aos-once="true">
 					Designing each holiday around a client’s needs and preferences, the result is an individually-created
 					itinerary which is big on imagination and catered around each individual's interests.&nbsp;
 				</p>
 			</div>
 			<a href="#gallery-btn">
-				<img class="about__image" src="./images/e7f30519174d8fa83955e6fcde111ddd.png" alt="" />
+				<img class="about__image" src="./images/e7f30519174d8fa83955e6fcde111ddd.png" alt=""  />
 			</a>
 		</section>
 		<!-- Gallery -->
@@ -107,18 +107,18 @@
 				</div>
 			</div>
 
-			<h2 class="title gallery__title">There is a world of possibilities out there</h2>
-			<p class="sub-title gallery__subtitle">Here are just a few trip ideas to get you started</p>
+			<h2 class="title gallery__title" data-aos="fade-down" data-aos-delay="0" data-aos-duration="800" data-aos-once="true">There is a world of possibilities out there</h2>
+			<p class="sub-title gallery__subtitle" data-aos="fade-down" data-aos-delay="50" data-aos-duration="800" data-aos-once="true">Here are just a few trip ideas to get you started</p>
 			<a class="button gallery__button" href="#invitation-btn">View more</a>
 		</section>
 		<!-- Where to go -->
 		<section class="travel container">
-			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" id="places"/>
+			<img class="travel__image" src="./images/358031b08eefaf6dd090cf867882e7b6.png" alt="" width="1200" height="812" id="places" data-aos="zoom-in" data-aos-duration="1500" data-aos-once="true"/>
 			<div class="travel__map-thumb" id="invitation">
 				<div class="travel__thumb">
-					<h2 class="title travel__title">Where to go?</h2>
-					<p class="travel__subtitle">Explore the world to find the destination of your choice.</p>
-					<p class="travel_description">
+					<h2 class="title travel__title" data-aos="fade-down" data-aos-delay="0" data-aos-duration="800" data-aos-once="true">Where to go?</h2>
+					<p class="travel__subtitle" data-aos="fade-down" data-aos-delay="50" data-aos-duration="800" data-aos-once="true">Explore the world to find the destination of your choice.</p>
+					<p class="travel_description" data-aos="fade-down" data-aos-delay="100" data-aos-duration="800" data-aos-once="true">
 						Guests can celebrate a milestone birthday with their own private camp and DJ on a glacier in Iceland,
 						indulge in a gastronomic tour of the Douro Valley, or connect with each other better through the power of
 						storytelling in the Botswana bush.&nbsp;Parents can connect with their teenage children while making their
@@ -176,9 +176,9 @@
 				</div>
 			</div>
 			<div class="invitation__text-thumb">
-				<h2 class="title">At Your Service</h2>
-				<p class="invitation__subtitle">The following come as standard when travelling with Original Travel.</p>
-				<p class="invitation__description">
+				<h2 class="title" data-aos="fade-down" data-aos-delay="0" data-aos-duration="800" data-aos-once="true">At Your Service</h2>
+				<p class="invitation__subtitle" data-aos="fade-down" data-aos-delay="50" data-aos-duration="800" data-aos-once="true">The following come as standard when travelling with Original Travel.</p>
+				<p class="invitation__description" data-aos="fade-down" data-aos-delay="100" data-aos-duration="800" data-aos-once="true">
 					Curated by a dedicated&nbsp;travel design team, the company has initially launched with 12 innovative
 					experiences, and will continue to add to the collection as new journeys are created. Completely bespoke
 					itineraries are also available, upon request.
